[project]
name = "ai-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.14",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.1.12",
    "langmem>=0.0.30",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "grandalf>=0.8",
    "pyright>=1.1.408",
    "ruff>=0.15.8",
]

[tool.black]
line-length = 130
target-version = ["py313"]

[tool.ruff]
line-length = 130

[tool.ruff.lint]
extend-select = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
